==> FASTSHIFT/Arduino-For-Keil/Keilduino (STM32)/_Keilduino (STM32F0xx)/Core/gpio.c <==
#include "gpio.h"

void GPIOx_Init(GPIO_TypeDef* GPIOx, uint16_t GPIO_Pin_x, pinMode_TypeDef pinMode_x, GPIOSpeed_TypeDef GPIO_Speed_x)
{
    GPIO_InitTypeDef GPIO_InitStructure;
    uint32_t RCC_AHBPeriph_GPIOx;
    GPIOMode_TypeDef GPIO_Mode_x;
    GPIOOType_TypeDef GPIO_OType_x;
    GPIOPuPd_TypeDef GPIO_PuPd_x;

    if(GPIOx == GPIOA)RCC_AHBPeriph_GPIOx = RCC_AHBPeriph_GPIOA;
    else if(GPIOx == GPIOB)RCC_AHBPeriph_GPIOx = RCC_AHBPeriph_GPIOB;
    else if(GPIOx == GPIOC)RCC_AHBPeriph_GPIOx = RCC_AHBPeriph_GPIOC;
    else if(GPIOx == GPIOD)RCC_AHBPeriph_GPIOx = RCC_AHBPeriph_GPIOD;
#if (defined(GPIOE) && defined(RCC_AHBPeriph_GPIOE))
    else if(GPIOx == GPIOE)RCC_AHBPeriph_GPIOx = RCC_AHBPeriph_GPIOE;
#endif
    else if(GPIOx == GPIOF)RCC_AHBPeriph_GPIOx = RCC_AHBPeriph_GPIOF;
    else return;

    if(pinMode_x == INPUT)
    {
        GPIO_Mode_x  = GPIO_Mode_IN;
        GPIO_PuPd_x  = GPIO_PuPd_NOPULL;
    }
    else if(pinMode_x == INPUT_PULLUP)
    {
        GPIO_Mode_x  = GPIO_Mode_IN;
        GPIO_PuPd_x  = GPIO_PuPd_UP;
    }
    else if(pinMode_x == INPUT_PULLDOWN)
    {
        GPIO_Mode_x  = GPIO_Mode_IN;
        GPIO_PuPd_x  = GPIO_PuPd_DOWN;
    }
    else if(pinMode_x == INPUT_ANALOG)
    {
        GPIO_Mode_x  = GPIO_Mode_AN;
        GPIO_PuPd_x  = GPIO_PuPd_NOPULL;
    }
    else if(pinMode_x == OUTPUT)
    {
        GPIO_Mode_x  = GPIO_Mode_OUT;
        GPIO_OType_x = GPIO_OType_PP;
        GPIO_PuPd_x  = GPIO_PuPd_NOPULL;
    }
    else if(pinMode_x == OUTPUT_OPEN_DRAIN)
    {
        GPIO_Mode_x  = GPIO_Mode_OUT;
        GPIO_OType_x = GPIO_OType_OD;
        GPIO_PuPd_x  = GPIO_PuPd_NOPULL;
    }
    else if(pinMode_x == OUTPUT_AF)
    {
        GPIO_Mode_x  = GPIO_Mode_AF;
        GPIO_OType_x = GPIO_OType_PP;
        GPIO_PuPd_x  = GPIO_PuPd_NOPULL;
    }

    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_x;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_x;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_x;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_x;
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_x;

    RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOx, ENABLE);
    GPIO_Init(GPIOx, &GPIO_InitStructure);
}
